# legacy-bk-paas

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  License.txt  README.md  README_EN.md  VERSION  pub.txt  readme.md  readme_en.md
paas2/esb/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  babel.cfg  babel.po  ignorefile  manage.py  on_migrate  pyproject.toml  requirements-py3.txt  requirements.txt  requirements_dev.txt  settings.py  tox.ini  urls.py  wsgi.py
paas2/esb/apps/operate_perm/: base.py  cc_perm.py
paas2/esb/apps/sdk_management/: constants.py  utils.py
paas2/esb/common/: base_loggers.py  base_redis.py  base_utils.py  base_validators.py  bkerrors.py  constants.py  django_utils.py  djmysql_pool.py  errors.py  file.py  flocale.py  forms.py  log.py
paas2/esb/components/: component.py  constants.py  esb_conf.py  urls.py
paas2/esb/components/confapis/approval/: approval.yaml
paas2/esb/components/confapis/bk_docs_center/: bk_docs_center.yaml
paas2/esb/conf/: default.py  settings_dev.py  settings_env.py  settings_testing.py  unittest_env
paas2/esb/esb/: __init__.py  apps.py  jinja2.py  middlewares.py  outgoing.py  response.py  routers.py  test_routers.py  views.py
paas2/esb/esb/bkapp/: models.py  validators.py
paas2/esb/esb/bkauth/: models.py  validators.py
paas2/esb/esb/bkcore/: managers.py  models.py
paas2/esb/esb/channel/: __init__.py  base.py  confapis.py  test_base.py  test_confapis.py
paas2/esb/esb/component/: __init__.py  base.py  buffet.py
paas2/esb/esb/compperm/: validators.py
paas2/esb/esb/exdb/: bkpaas.py  connections.py  models.py
paas2/esb/esb/ratelimit/: validators.py
paas2/esb/esb/utils/: __init__.py  base.py  confapis.py  config.py  func_ctrl.py  jwt_utils.py
paas2/esb/healthz/: checklist.txt  errors.py  urls.py  utils.py  views.py  views_check_codename.py
paas2/esb/lib/redis_rate_limit/: __init__.py  ratelimit.py
paas2/esb/tests/: conftest.py
paas2/esb/tests/common/: test_base_utils.py  test_base_validators.py  test_errors.py  test_file.py
paas2/esb/tests/esb/: test_outgoing.py  test_routers.py
(+4660 files in other folders)
