[tool.poetry]
name = "esb"
version = "2.11.20"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
Django = "1.11.29"
requests = "2.21.0"
jinja2 = "2.11.3"
markdown = "2.6.6"
markupsafe = "1.1.1"
pyasn1 = "0.4.8"
pycparser = "2.20"
pygments = "2.1.3"
pyjwt = "1.4.2"
pymysql = "0.6.7"
python-dateutil = "2.8.1"
pytz = "2016.6.1"
pyyaml = "5.1"
redis = "2.10.5"
six = "1.15.0"
sqlalchemy = "1.0.12"
thrift = "0.10.0"
gevent = "1.1.2"
cachetools = "3.1.1"
enum34 = "1.1.6"
ConcurrentLogHandler = "0.9.1"
pycrypto = "2.6.1"
PyJWT = "1.4.2"
gunicorn = "19.9.0"
uWSGI = "2.0.13.1"
PyYAML = "5.1"
arrow = "0.10.0"
Pygments = "2.1.3"
django-environ = "0.4.5"
pytest-django = "3.9.0"
pytest = "4.6.11"
future = "0.18.2"

[tool.poetry.dev-dependencies]
pytest-mock = "2.0.0"
flake8 = "*"
ipython = "*"
mock = "3.0.5"
isort = "*"
pre-commit = "*"
ipdb = "*"
tox = "^3.23.0"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
